unpackaged/main/default/objects/Total_Cost__c/Total_Cost__c.object-meta.xml
<CustomObject>
    <label>Total Cost</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Total Cost</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>