unpackaged/main/default/objects/Total_Cost__c/fields/Jeaning__c.field-meta.xml
<CustomField>
    <fullName>Jeaning__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jeaning</label>
    <referenceTo>Jeaning__c</referenceTo>
    <relationshipLabel>Total Cost</relationshipLabel>
    <relationshipName>Total_Cost</relationshipName>
    <type>Lookup</type>
</CustomField>