unpackaged/main/default/objects/Total_Cost__c/fields/Product_Detail__c.field-meta.xml
<CustomField>
    <fullName>Product_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Detail</label>
    <referenceTo>Product_Detail__c</referenceTo>
    <relationshipName>Workers</relationshipName>
    <type>Lookup</type>
</CustomField>