unpackaged/main/default/objects/Total_Cost__c/fields/profit__c.field-meta.xml
<CustomField>
    <fullName>profit__c</fullName>
    <formula>Jeaning__r.Amount_of_seller_product__c  -  Product_Detail__r.Amount_in_Rupees__c  *  Transport__r.Rent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>