unpackaged/main/default/objects/Total_Cost__c/fields/Transport__c.field-meta.xml
<CustomField>
    <fullName>Transport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transport</label>
    <referenceTo>Transport__c</referenceTo>
    <relationshipLabel>Total Cost</relationshipLabel>
    <relationshipName>Total_Cost</relationshipName>
    <type>Lookup</type>
</CustomField>